user_practice.txt
# Paste your interactive Python practice sesssion here
# See course site for details.
#
# Windows                 Mac
# CTRL A = select all = Command A
# CTRL C = copy =       Command C
# CTRL V = paste =      Command V

# It'll look something like this only longer:

Python 3.10.5 (main, Jul 22 2022, 17:09:35) [GCC 9.4.0] on linux
Type "help", "copyright", "credits" or "license" for more information.
>>> 2+2
4
>>> print("hello")
hello
>>> a = 5
>>> b = 3
>>> print( min (a, b))
3
>>> 

(base) C:\Users\jorda>>>>
> was unexpected at this time.

(base) C:\Users\jorda>ipython
Python 3.9.15 (main, Nov 24 2022, 14:39:17) [MSC v.1916 64 bit (AMD64)]
Type 'copyright', 'credits' or 'license' for more information
IPython 7.31.1 -- An enhanced Interactive Python. Type '?' for help.

In [1]: 45 + 72
Out[1]: 117

In [2]: x = 7

In [3]: y = 3

In [4]: x + y
Out[4]: 10

In [5]: total = x + y

In [6]: total
Out[6]: 10

In [7]: type(x)
Out[7]: int

In [8]: type(10.5)
Out[8]: float

In [9]: print("2.3 Arithmetic")
2.3 Arithmetic

In [10]: 7 * 4
Out[10]: 28

In [11]: 2 ** 10
Out[11]: 1024

In [12]: 9 ** (1/2)
Out[12]: 3.0

In [13]: 7 / 4
Out[13]: 1.75

In [14]: 7 // 4
Out[14]: 1

In [15]: 3 // 5
Out[15]: 0

In [16]: 14 // 7
Out[16]: 2

In [17]: -13 / 4
Out[17]: -3.25

In [18]: -13 // 4
Out[18]: -4

In [19]: 123 / 0
---------------------------------------------------------------------------
ZeroDivisionError                         Traceback (most recent call last)
<ipython-input-19-76e1a9ab9410> in <module>
----> 1 123 / 0

ZeroDivisionError: division by zero

In [20]: z + 7
---------------------------------------------------------------------------
NameError                                 Traceback (most recent call last)
<ipython-input-20-2ca5f6c7aca2> in <module>
----> 1 z + 7

NameError: name 'z' is not defined

In [21]: 17 % 5
Out[21]: 2

In [22]: 7.5 % 3.5
Out[22]: 0.5

In [23]: 10 * (5 + 3)
Out[23]: 80

In [24]: 10 * 5 + 3
Out[24]: 53

In [25]: print("2.4 Function Print and an Intro to Single- and Double Quoted Strings")
2.4 Function Print and an Intro to Single- and Double Quoted Strings

In [26]: print('Welcome to Python!')
Welcome to Python!

In [27]: print ("Welcome to Python!")
Welcome to Python!

In [28]: print('Welcome\nto\n\nPython!')
Welcome
to

Python!

In [29]: print('this is a longer string, so we \
    ...: split it over two lines')
this is a longer string, so we split it over two lines

In [30]: print('Sum is', 7 + 3)
Sum is 10

In [31]: print('Display "hi" in quotes')
Display "hi" in quotes

In [32]: print('Display 'hi' in quotes')
  File "<ipython-input-32-19bf596ccf72>", line 1
    print('Display 'hi' in quotes')
                    ^
SyntaxError: invalid syntax


In [33]: print('Display \'hi\' in quotes')
Display 'hi' in quotes

In [34]: print("Display the name O'Brien")
Display the name O'Brien

In [35]: print("Display \"hi\" in quotes)
  File "<ipython-input-35-920e61a5c637>", line 1
    print("Display \"hi\" in quotes)
                                    ^
SyntaxError: EOL while scanning string literal


In [36]: print("Display \"hi\" in quotes")
Display "hi" in quotes

In [37]: print("""Dispaly "hi" and 'bye' in quotes""")
Dispaly "hi" and 'bye' in quotes

In [38]: triple_quoted_string = """This is a triple-quoted
    ...: string that spans two lines"""

In [39]: print(triple_quoted_string)
This is a triple-quoted
string that spans two lines

In [40]: triple_quoted_string
Out[40]: 'This is a triple-quoted \nstring that spans two lines'

In [41]: print("2.6 Getting Input from the User")
2.6 Getting Input from the User

In [42]: name = input("What's your name? ")
What's your name? Jordan

In [43]: name
Out[43]: 'Jordan'

In [44]: print(name)
Jordan

In [45]: name = input("What's your name? ")
What's your name? Jordan

In [46]: name = input("What's your name? ")
What's your name? 'Jordan'

In [47]: name
Out[47]: "'Jordan'"

In [48]: print(name)
'Jordan'

In [49]: value1 = input(' Enter first number: ')
 Enter first number: 7

In [50]: value2 = input('Enter second number: ')
Enter second number: 3

In [51]: value1 + value2
Out[51]: '73'

In [52]: value = input('Enter an integer: ')
Enter an integer:

In [53]: value = int(value)
---------------------------------------------------------------------------
ValueError                                Traceback (most recent call last)
<ipython-input-53-2c52d92d0dc1> in <module>
----> 1 value = int(value)

ValueError: invalid literal for int() with base 10: ''

In [54]: value = input ('Enter an integer: ')
Enter an integer: 7

In [55]: value = int(value)

In [56]: value
Out[56]: 7

In [57]: another_value = int(input('Enter another intger: '))
Enter another intger: 13

In [58]: another_value
Out[58]: 13

In [59]: value + another_value
Out[59]: 20

In [60]: bad_value = int(input('Enter another integer: '))
Enter another integer: hello
---------------------------------------------------------------------------
ValueError                                Traceback (most recent call last)
<ipython-input-60-cd36e6cf8911> in <module>
----> 1 bad_value = int(input('Enter another integer: '))

ValueError: invalid literal for int() with base 10: 'hello'

In [61]: int(10.5)
Out[61]: 10

In [62]: float('6.2') * 3.3
Out[62]: 20.46
